--- a/data/customtheming.scss
+++ b/data/customtheming.scss
@@ -1,3 +1,13 @@
 /*-- scss:defaults --*/
 
 $body-bg: #ffffff;
+
+/* Decrease the font size of the title on the first page */
+.remark-slide-content h1.title {
+    font-size: 16px;  /* Adjust this value as needed */
+}
+
+/* Decrease the font size on all slides */
+.remark-slide-content {
+    font-size: 12px;  /* Adjust this value as needed */
+}
